# fastbin

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  taskfile.yml
alembic/: env.py
alembic/versions/: 44b7e8ac1df0_removed_token_blacklist_and_added_token_.py  52be10933cfd_initial_migration.py  b08ddf1f6c75_added_token_blacklist_model.py
app/: main.py
app/api/: auth.py  oauth.py
app/core/: config.py  database.py  security.py
app/middleware/: __init__.py  auth_middleware.py
app/models/: __init__.py  paste.py  token.py  token_blacklist.py  user.py
app/schemas/: __init__.py  user.py
app/services/: auth_service.py
app/templates/: base.html
tests/: test_database.py
